static/widgets.css
@import url("./lib/tabs.css");

.indented {
  margin-left: 3ch;
}

.item {
  display: flex;
  align-items: start;
  gap: 0.25ch;
}

thead,
.htbl-label,
.bold {
  font-weight: bold;
}

input[type="checkbox"],
input[type="radio"] {
  margin-top: 4px;
}

input[type="range"] {
  margin-top: 8px;
}

.ltbl > tr > td {
  border: none;
  padding: 0px;
}

.ltbl > tr > td:nth-child(1) {
  text-align: right;
}

.blk {
  margin-top: 0.25em;
  margin-bottom: 0.25em;
}

.blk:first-child {
  margin-top: 0em;
}

.blk:last-child {
  margin-bottom: 0em;
}

.blk-bottom {
  margin-bottom: 0.25em;
}
.blk-bottom:last-child {
  margin-bottom: 0em;
}

.blk-top {
  margin-top: 0.25em;
}

.blk-top:first-child {
  margin-top: 0em;
}

.ltbl > tr.blk:has(+ tr.blk) > td,
.ltbl > tr.blk:has(+ tr.blk-top) > td,
.ltbl > tr.blk-bottom:has(+ tr.blk) > td,
.ltbl > tr.blk-bottom:has(+ tr.blk-top) > td {
  padding-bottom: 0.25em;
}

.bg {
  width: fit-content;
  border-radius: 2px;
}

.frm > table > tr > td {
  border: none;
  vertical-align: middle;
}

select {
  margin: 1px;
}

.ln {
  display: flex;
  align-items: flex-start;
}

fieldset {
  width: fit-content;
}

button {
  margin-top: 0.25em;
  margin-bottom: 0.25em;
}

.crd {
  overflow: hidden;
  width: fit-content;
  border: 1px solid var(--color-2);
  border-radius: 0.5em;
}

.crd-header {
  font-weight: bold;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
  text-align: center;
}

.crd-header.border {
  border-bottom: 1px solid var(--color-2);
}

.crd-body {
  text-align: center;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
  margin: auto;
}

.crd-body > * {
  width: fit-content;
  display: inline-block;
  text-align: left;
}

.crd-attr-table {
  width: 100%;
}

.crd-attr-table > tr > td {
  border: none;
}

.crd-attr-table > tr {
  border-top: 1px solid var(--color-2);
}

.crd-attr-table > tr > td:nth-child(1) {
  border-right: 1px solid var(--color-2);
  text-align: right;
}

.crd-attr-table.no-border > tr:nth-child(1) {
  border-top: none;
}

.pgs-page {
  min-width: 6.3ch;
  display: inline-block;
  text-align: center;
}

.pgs-pager {
  display: inline-block;
}

.tgl-icon {
  cursor: default;
  user-select: none;
}

img {
  display: block;
}

.tt {
  font-family: "IBM Plex Mono", monospace;
}

a {
  color: var(--color-1);
}

.st {
  display: inline-block;
  border-radius: 2px;
}

.tm > .menu {
  margin: 0px;
}

span {
  display: inline-block;
}

.widget {
  width: fit-content;
}

.out {
  --flash-to: transparent;
}

.out:not(button, input, select, textarea, .crd, .tab) {
  border-radius: 2px;
}

.out:not(button, input, select, textarea).flash {
  animation: flash 800ms ease-out;
}

.out:is(button, input, select, textarea).flash {
  animation: flash-control 800ms ease-out;
}

@keyframes flash {
  0% {
    background-color: var(--color-2);
  }

  100% {
    background-color: var(--flash-to);
  }
}

@keyframes flash-control {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

